--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "namewall-hidden",
   "version": "1.0.0",
   "scripts": {
-    "build": "esbuild app.js --bundle --outfile=dist/bundle.js --define:process.env.FIREBASE_API_KEY='\"$FIREBASE_API_KEY\"' --define:process.env.FIREBASE_AUTH_DOMAIN='\"$FIREBASE_AUTH_DOMAIN\"' --define:process.env.FIREBASE_DATABASE_URL='\"$FIREBASE_DATABASE_URL\"' --define:process.env.FIREBASE_PROJECT_ID='\"$FIREBASE_PROJECT_ID\"' --define:process.env.FIREBASE_STORAGE_BUCKET='\"$FIREBASE_STORAGE_BUCKET\"' --define:process.env.FIREBASE_MESSAGING_SENDER_ID='\"$FIREBASE_MESSAGING_SENDER_ID\"' --define:process.env.FIREBASE_APP_ID='\"$FIREBASE_APP_ID\"'"
+    "build": "esbuild app.js --bundle --outfile=dist/bundle.js --define:process.env.FIREBASE_API_KEY='\"$FIREBASE_API_KEY\"' --define:process.env.FIREBASE_AUTH_DOMAIN='\"$FIREBASE_AUTH_DOMAIN\"' --define:process.env.FIREBASE_DATABASE_URL='\"$FIREBASE_DATABASE_URL\"' --define:process.env.FIREBASE_PROJECT_ID='\"$FIREBASE_PROJECT_ID\"' --define:process.env.FIREBASE_STORAGE_BUCKET='\"$FIREBASE_STORAGE_BUCKET\"' --define:process.env.FIREBASE_MESSAGING_SENDER_ID='\"$FIREBASE_MESSAGING_SENDER_ID\"' --define:process.env.FIREBASE_APP_ID='\"$FIREBASE_APP_ID\"' && ls -la dist || echo 'Build failed!'"
   },
   "devDependencies": {
     "esbuild": "^0.20.1"
