Fix build by adding mkdir -p dist

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "cp index.html app.js dist/"
+  command = "mkdir -p dist && cp index.html app.js dist/"
   publish = "dist"
 
 [build.environment]
