switch to hidden keys with esbuild

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "mkdir -p dist && cp index.html app.js dist/"
+  command = "npm install && mkdir -p dist && npm run build && cp index.html dist/"
   publish = "dist"
 
 [build.environment]
